objects/MedProSC__MedPro_Professional_Designations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MedProSC__Designation_Values__c</fullName>
        <label>Designation Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Designation_With_Acronym__c</fullName>
        <label>Designation with Acronym</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Index__c</fullName>
        <inlineHelpText>This defines the ordering  of the designations for the user</inlineHelpText>
        <label>Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MedPro Professional Designations</label>
</CustomObject>